changed out path parameters for query parameters for weapon handlers and loadout handlers. finished weapon handlers. next steps are to get a database wired up
